--- a/AndroShieldApp/AndroShield/Styling/StyleSheet.css
+++ b/AndroShieldApp/AndroShield/Styling/StyleSheet.css
@@ -47,6 +47,19 @@ footer {
     font-weight: bolder;
     cursor: pointer;
 }
+.checkMarkImage {
+    width: 20px;
+    margin-left: 6px;
+}
+.cleanApkMessage {
+    margin: 0 auto;
+    width: 50%;
+    padding: 15px;
+    font-size: x-large;
+    font-weight: bolder;
+    text-align: center;
+    margin-bottom: 25px;
+}
 #xSymbol, #exclamation {
     width: 15px;
     height: 15px;
